--- a/public/login.html
+++ b/public/login.html
@@ -26,7 +26,7 @@
             <label for="last_name">Password</label>
           </div>
         </div>
-        <a id="register" class="waves-effect waves-light btn">Login</a>
+        <a id="register" class="waves-effect waves-light btn">Login Here!</a>
       </form>
     </div>
   </div>
