--- a/public/login.html
+++ b/public/login.html
@@ -12,8 +12,8 @@
 <body>
 
   <div class="container">
-    <h1>Techy Tech Blog</h1>
-    <h2>Login</h2>
+    <h1>Blog Template Login Page</h1>
+    <h2>Login Below!</h2>
     <div class="row">
       <form class="col s12">
         <div class="row">
